--- a/代码练习/1.html
+++ b/代码练习/1.html
@@ -405,7 +405,7 @@ var carName = "Volvo";
   {
     carName = "Volvo"
   }
-  </script> -->
+  </script> 
 
   字符串
 <p>中括号 [] 返回字符串中对应索引位置的字符：</p>
@@ -929,6 +929,67 @@ var x = function (a, b) {return a * b};
 document.getElementById("demo").innerHTML = x(4, 3);
 </script>
 
- 
+<!-- 构造函数 -->
+<p id="demo"></p>
+<script>
+  var myFunction = new Function("a","b","return a*b");
+ document.getElementById("demo").innerHTML = myFunction(4,3);
+</script>
+<!-- 
+自调函数 -->
+<p id="demo"></p>
+<script>
+(function () {
+document.getElementById("demo").innerHTML="Hello!我是自己调的";
+})();
+</script>
+
+ <!-- 函数可作为一个值使用 -->
+<p id="demo"></p>
+<script>
+ function myFunction(a,b) {
+    return a * b;
+}
+  var x = myFunction(4,3) * 2;
+  document.getElementById("demo").innerHTML = x;
+</script>
+
+<!-- 函数是对象 -->
+<p> toString() 将函数作为一个字符串返回：</p>
+<p id="demo"></p>
+<script>
+function myFunction(a, b) {
+    return a * b;
+}
+document.getElementById("demo").innerHTML = myFunction.toString();
+</script>
+
+<!-- 箭头参数 -->
+<p id="demo"></p>
+<script>
+const x = (x, y) => x * y;
+document.getElementById("demo").innerHTML = x(5, 5);
+</script>
+
+默认参数
+<p id="demo"></p>
+<script>
+function myFunction(x, y) {
+    y = y || 0;
+    return x * y;
+}
+document.getElementById("demo").innerHTML = myFunction(4);
+</script>
+
+<p id="demo"></p>
+<script>
+function myFunction(x, y) {
+    y = y || 0;
+    return x * y;
+}
+document.getElementById("demo").innerHTML = myFunction(4);
+</script>
+
+
  </body>
 </html>
