--- a/代码练习/1.html
+++ b/代码练习/1.html
@@ -999,7 +999,7 @@ document.getElementById("demo").innerHTML = myFunction(4);
  *    myFunction 被不断地 重新定义 ，因此 只有最后一个生效
  * 3.DOM ID 和方法名字  建议换个名字 每次不重样 
  * 4. html ,css ，js 文件分离 ，
- * 
+ * 5. 新起文件 ，别在这个文件后继续累加 ，可以在 代码练习 目录下新建三级目录 甚至 四级 五级 目录 
  *  
  * /
 </script>
