--- a/代码练习/DOM HTML.html
+++ b/代码练习/DOM HTML.html
@@ -24,7 +24,7 @@ element.innerHTML="新标题";
 </script>
 <!-- "旧标题" 被 "新标题" 取代 -->
 
-
+<!-- 改变 HTML 属性 -->
 <img id="image" src="../tp/landscape.jpg" width="160" height="120">
 <script>
 document.getElementById("tp").src="landscape.jpg";
