--- a/代码练习/DOM css.html
+++ b/代码练习/DOM css.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  改变 HTML 样式
+  <!-- 改变 HTML 样式 -->
   <p id="p1">Hello World!</p>
 <p id="p2">Hello World!</p>
 <script>
@@ -15,6 +15,7 @@ document.getElementById("p2").style.fontFamily="Arial";
 document.getElementById("p2").style.fontSize="larger";
 </script>
 
+<!-- 使用 -->
 <h1 id="id1">我的标题 1</h1>
 <button type="button" onclick="document.getElementById('id1').style.color='red'">
 点我!</button>
