--- a/代码练习/DOM 事件.html
+++ b/代码练习/DOM 事件.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  HTML 事件属性
+  <!-- HTML 事件属性 -->
   <h1 onclick="this.innerHTML='Ooops!'">点</h1>
 
   <script>
@@ -16,7 +16,7 @@
     </script>
   </body>
     <h1 onclick="changetext(this)">点</h1>
-    HTML 事件属性
+    <!-- HTML 事件属性 -->
     <button onclick="displayDate()">点</button>
     <script>
     function displayDate(){
@@ -25,7 +25,7 @@
     </script>
     <p id="demo"></p>
 
-    使用 HTML DOM 来分配事件  
+    <!-- 使用 HTML DOM 来分配事件   -->
 <button id="myBtn">点</button>
 <script>
 document.getElementById("myBtn").onclick=function(){displayDate()};
@@ -35,7 +35,7 @@ function displayDate(){
 </script>
 <p id="demo"></p>
 
-onload 和 onunload
+<!-- onload 和 onunload -->
 <body onload="checkCookies()">
 
   <script>
@@ -60,6 +60,7 @@ onload 和 onunload
   <body>
   输入你的名字: <input type="text" id="fname" onchange="myFunction()">
  <!-- 离开输入框后，函数将小写字母转为大写字母 -->
+ <!-- onmouseover-onmouseout -->
  <div onmouseover="mOver(this)" onmouseout="mOut(this)" style="background-color:#D94A38;width:120px;height:20px;padding:40px;">Mouse Over Me</div>
  <script>
  function mOver(obj){
