--- a/代码练习/测试Prototype2.html
+++ b/代码练习/测试Prototype2.html
@@ -6,10 +6,10 @@
   <title>Document</title>
   <script src="https://cdn.staticfile.org/prototype/1.7.3/prototype.min.js"></script>
 <script>
-function myFunction(){
+function myFunction1(){
 	$("h01").writeAttribute("style","color:red").insert("Hello Prototype!");
 }
-Event.observe(window,"load",myFunction);
+Event.observe(window,"load",myFunction1);
 </script>
 </head>
 <body>
