--- a/代码练习/测试jQuery2.html
+++ b/代码练习/测试jQuery2.html
@@ -6,10 +6,10 @@
   <title>Document</title>
   <script src="https://cdn.staticfile.org/jquery/1.8.3/jquery.min.js"></script>
 <script>
-function myFunction(){
+function myFunction1(){
 	$("#h01").attr("style","color:red").html("Hello jQuery")
 }
-$(document).ready(myFunction);
+$(document).ready(myFunction1);
 </script>
 </head>
 <body>
