--- a/jQuery/1.html
+++ b/jQuery/1.html
@@ -6,10 +6,11 @@
   <title>Document</title>
   <style>
   /* 父子选择 */
-  div > span{
+  /* div > span{
     color: pink;
     font-size: 20px;
-  }
+  } */
+
   </style>
 </head>
 <body>
