--- a/jQuery/捕获/attr.html
+++ b/jQuery/捕获/attr.html
@@ -9,13 +9,13 @@
   <script>
   $(document).ready(function(){
     $("button").click(function(){
-      $("#div1").load("/try/ajax/demo_test.txt #p1");
+      alert($("#runoob").attr("href"));
     });
   });
   </script>
 </head>
 <body>
-  <div id="div1"><h2>使用 jQuery AJAX 修改文本</h2></div>
-<button>获取外部文本</button>
+  <p><a href="http://www.runoob.com" id="runoob">菜鸟教程</a></p>
+<button>显示 href 属性的值</button>
 </body>
 </html>
