--- a/jQuery/其他/noConflict.html
+++ b/jQuery/其他/noConflict.html
@@ -7,15 +7,16 @@
   <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
   </script>
   <script>
-  $(document).ready(function(){
-    $("button").click(function(){
-      $("#div1").load("/try/ajax/demo_test.txt");
+  $.noConflict();
+  jQuery(document).ready(function(){
+    jQuery("button").click(function(){
+      jQuery("p").text("jQuery 仍然在工作!");
     });
   });
   </script>
 </head>
 <body>
-  <div id="div1"><h2>使用 jQuery AJAX 修改文本内容</h2></div>
-<button>获取外部内容</button>
+  <p>这是一个段落。</p>
+<button>点我</button>
 </body>
 </html>
