--- a/jQuery/选择器/hide.html
+++ b/jQuery/选择器/hide.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
+  <script src="https://cdn.staticfile.org/jquery/2.0.0/jquery.min.js">
   </script>
   <script>
   $(document).ready(function(){
     $("button").click(function(){
-      $("#div1").load("/try/ajax/demo_test.txt");
+      $(this).hide();
     });
   });
   </script>
 </head>
 <body>
-  <div id="div1"><h2>使用 jQuery AJAX 修改文本内容</h2></div>
-<button>获取外部内容</button>
+  <button>点</button>
+  <!-- 隐藏当前的 HTML 元素 -->
 </body>
 </html>
