--- a/jQuery/选择器/hide4.html
+++ b/jQuery/选择器/hide4.html
@@ -9,20 +9,16 @@
   <script>
   $(document).ready(function(){
     $("button").click(function(){
-      $("#div1").empty();
+      $("#test").hide();
     });
   });
   </script>
 </head>
 <body>
-  <div id="div1" style="height:100px;width:300px;border:1px solid black;background-color:pink;">
-
-    这是 div 中的一些文本。
-    <p>这是在 div 中的一个段落。</p>
-    <p>这是在 div 中的另外一个段落。</p>
-    
-    </div>
-    <br>
-    <button>清空div元素</button>
+  <h2>这是一个标题</h2>
+<p>这是一个段落</p>
+<p id="test">这是另外一个段落</p>
+<button>点</button>
+<!-- 隐藏 id="test" 的元素 -->
 </body>
 </html>
