--- a/jQuery/选择器/first.html
+++ b/jQuery/选择器/first.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
   </script>
   <script>
   $(document).ready(function(){
-    $("#intro").css("background-color","pink");
+    $("p:first").css("background-color","pink");
   });
   </script>
 </head>
 <body>
-  <h1>我的主页</h1>
-<p>菜鸟教程</p>
-<p id="intro">学的不仅是技术更是梦想</p>
+<p>这是第一个段落。</p>
+<p>这是第二个段落。</p>
+<p>这是最后一个段落。</p>
 </body>
 </html>
