--- a/jQuery/选择器/last.html
+++ b/jQuery/选择器/last.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
   </script>
   <script>
   $(document).ready(function(){
-    $("#intro").css("background-color","pink");
+    $("p:last").css("background-color","pink");
   });
   </script>
 </head>
 <body>
-  <h1>我的主页</h1>
-<p>菜鸟教程</p>
-<p id="intro">学的不仅是技术更是梦想</p>
+  <p>This is the first paragraph.</p>
+<p>This is the second paragraph.</p>
+<p>This is the last paragraph.</p>
+
 </body>
 </html>
