--- a/jQuery/选择器/attribute!value.html
+++ b/jQuery/选择器/attribute!value.html
@@ -8,14 +8,12 @@
   </script>
   <script>
   $(document).ready(function(){
-    $(":header").css("background-color","pink");
+    $("p[class!='intro']").css("background-color","pink");
   });
   </script>
 </head>
 <body>
-  <h1>欢迎来到我的主页</h1>
-<h2>菜鸟教程主页</h2>
-<h3>内容很棒</h3>
+  <h1>我的主页</h1>
 <p class="intro">菜鸟教程</p>
 <p>学的不仅是技术更是梦想</p>
 <p>学的不仅是技术更是梦想</p>
@@ -25,6 +23,5 @@
 <li>Taobao</li>
 <li>Runoob</li>
 </ul>
-
 </body>
 </html>
