--- a/jQuery/选择器/attribute$value.html
+++ b/jQuery/选择器/attribute$value.html
@@ -8,21 +8,12 @@
   </script>
   <script>
   $(document).ready(function(){
-    $("p:not(.intro)").css("background-color","pink");
-  });
+    $("a[href$='.org']").css("background-color","pink");});
   </script>
 </head>
 <body>
-  <h1>我的主页</h1>
-<p class="intro">菜鸟教程</p>
-<p>学的不仅是技术更是梦想</p>
-<p>学的不仅是技术更是梦想</p>
-<p>你最喜欢的网站:</p>
-<ul id="choose">
-<li>Google</li>
-<li>Taobao</li>
-<li>Runoob</li>
-</ul>
-
+  <a href="http://www.runoob.com">菜鸟教程</a><br>
+<a href="http://www.google.com">Google.com</a><br>
+<a href="http://www.wikipedia.org">wikipedia.org</a>
 </body>
 </html>
