--- a/jQuery/选择器/image.html
+++ b/jQuery/选择器/image.html
@@ -8,21 +8,16 @@
   </script>
   <script>
   $(document).ready(function(){
-    $("p:not(.intro)").css("background-color","pink");
+    $(":image").css("background-color","pink");
   });
   </script>
 </head>
 <body>
-  <h1>我的主页</h1>
-<p class="intro">菜鸟教程</p>
-<p>学的不仅是技术更是梦想</p>
-<p>学的不仅是技术更是梦想</p>
-<p>你最喜欢的网站:</p>
-<ul id="choose">
-<li>Google</li>
-<li>Taobao</li>
-<li>Runoob</li>
-</ul>
-
+  <form action="">
+    用户名: <input type="text" name="user"><br>
+    密码: <input type="password" name="password"><br>
+    兼容性: <input type="image" src="/images/compatible_ie.gif" width="31" height="30">
+    </form>
+    
 </body>
 </html>
