--- a/jQuery/选择器/radio .html
+++ b/jQuery/选择器/radio .html
@@ -8,21 +8,17 @@
   </script>
   <script>
   $(document).ready(function(){
-    $("p:not(.intro)").css("background-color","pink");
+    $(":radio").wrap("<span style='background-color:pink' />");
   });
   </script>
 </head>
 <body>
-  <h1>我的主页</h1>
-<p class="intro">菜鸟教程</p>
-<p>学的不仅是技术更是梦想</p>
-<p>学的不仅是技术更是梦想</p>
-<p>你最喜欢的网站:</p>
-<ul id="choose">
-<li>Google</li>
-<li>Taobao</li>
-<li>Runoob</li>
-</ul>
-
+  <form action="">
+    用户名: <input type="text" name="user"><br>
+    男:<input type="radio" name="sex" value="m"><br>
+    女<input type="radio" name="sex" value="f"><br>
+    <input type="submit">
+    </form>
+      
 </body>
 </html>
