--- a/jQuery/效果方法/animate.html
+++ b/jQuery/效果方法/animate.html
@@ -8,19 +8,19 @@
   </script>
   <script>
   $(document).ready(function(){
-    $("input").select(function(){
-      $("input").after("文本已选中!");
+    $("#btn1").click(function(){
+      $("#box").animate({height:"300px"});
     });
-    $("button").click(function(){
-      $("input").trigger("select");
+    $("#btn2").click(function(){
+      $("#box").animate({height:"100px"});
     });
   });
   </script>
 </head>
 <body>
-  <input type="text" value="Hello World">
-<br><br>
-<button>触发输入框的 select 事件</button>
+  <button id="btn1">使用动画放大高度</button>
+<button id="btn2">重置高度</button>
+<div id="box" style="background:pink;height:100px;width:100px;margin:6px;">
+</div>
 
-</body>
-</html>
+</body> 
