--- a/jQuery/效果方法/show.html
+++ b/jQuery/效果方法/show.html
@@ -4,20 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-
   <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
   </script>
   <script>
   $(document).ready(function(){
-    $("p").hover(function(){
-      $("p").css("background-color","yellow");
-      },function(){
-      $("p").css("background-color","pink");
+    $(".btn1").click(function(){
+      $("p").hide();
+    });
+    $(".btn2").click(function(){
+      $("p").show();
     });
   });
   </script>
 </head>
 <body>
-  <p>鼠标移动到这个段落</p>
+  <p>一个段落</p>
+<button class="btn1">隐藏</button>
+<button class="btn2">显示</button>
+
 </body>
 </html>
