--- a/jQuery/遍历方法/children.html
+++ b/jQuery/遍历方法/children.html
@@ -21,7 +21,7 @@
     });
     </script>
 </head>
-<body >
+<body class="descendants">
   <div style="width:500px;">div (祖先节点)
     <ul>ul (直接父节点)  
       <li>li (子节点)
