--- a/Bootstrap/列表组/list-group.html
+++ b/Bootstrap/列表组/list-group.html
@@ -9,11 +9,12 @@
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" aria-valuenow="60"
-       aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-      <span class="sr-only">40% 完成</span>
-    </div>
-  </div>
+  <ul class="list-group">
+    <li class="list-group-item">免费域名注册</li>
+    <li class="list-group-item">免费 Window 空间托管</li>
+    <li class="list-group-item">图像的数量</li>
+    <li class="list-group-item">24*7 支持</li>
+    <li class="list-group-item">每年更新成本</li>
+  </ul>
 </body>
 </html>
