--- a/Bootstrap/列表组/向列表组添加链接.html
+++ b/Bootstrap/列表组/向列表组添加链接.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,11 +10,14 @@
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" aria-valuenow="60"
-       aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-      <span class="sr-only">40% 完成</span>
-    </div>
-  </div>
+  <a href="#" class="list-group-item active">
+    免费域名注册
+  </a>
+  <a href="#" class="list-group-item">24*7 支持</a>
+  <a href="#" class="list-group-item">免费 Window 空间托管</a>
+  <a href="#" class="list-group-item">图像的数量</a>
+  <a href="#" class="list-group-item">每年更新成本</a>
+  
+  
 </body>
 </html>
