--- a/Bootstrap/面板/Panels.html
+++ b/Bootstrap/面板/Panels.html
@@ -9,11 +9,10 @@
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" aria-valuenow="60"
-       aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-      <span class="sr-only">40% 完成</span>
+  <div class="panel panel-default">
+    <div class="panel-body">
+        这是一个基本的面板
     </div>
-  </div>
+</div>
 </body>
 </html>
