--- a/Bootstrap/面板/面板标题.html
+++ b/Bootstrap/面板/面板标题.html
@@ -9,11 +9,25 @@
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" aria-valuenow="60"
-       aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-      <span class="sr-only">40% 完成</span>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      不带 title 的面板标题
+    </div>
+    <div class="panel-body">
+      面板内容
     </div>
   </div>
+  
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">
+        带有 title 的面板标题
+      </h3>
+    </div>
+    <div class="panel-body">
+      面板内容
+    </div>
+  </div>
+  
 </body>
 </html>
