--- a/丸子妹 项目/about.html
+++ b/丸子妹 项目/about.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>小丸子</title>
-  <!-- 样式css -->
-  <link rel="stylesheet" href="css/style.css">
+  <title>丸子妹</title>
 </head>
 <body>
   	<!-- 大图 -->
