--- a/丸子妹 项目/index.html
+++ b/丸子妹 项目/index.html
@@ -6,6 +6,8 @@
   <title>丸子妹</title>
 	 <!-- 样式css -->
 	 <link rel="stylesheet" href="css/style.css">
+	  <!-- 轮播图js -->
+   <script src="banner.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
   	<!-- 大图 -->
