--- a/css3/渐变/从上到下的线性渐变.html
+++ b/css3/渐变/从上到下的线性渐变.html
@@ -18,7 +18,7 @@
 
 <div id="grad1"></div>
 
-<p><strong>注意：</strong> Internet Explorer 9 及之前的版本不支持渐变。</p>
+<!-- <p><strong>注意：</strong> Internet Explorer 9 及之前的版本不支持渐变。</p> -->
 
 </body>
 </html>
