--- a/Bootstrap4/分页/面包屑导航.html
+++ b/Bootstrap4/分页/面包屑导航.html
@@ -11,10 +11,15 @@
 </head>
 <body>
   <div class="container">
-    <h2>不同大小的按钮</h2>
-    <button type="button" class="btn btn-primary btn-lg">大号按钮</button>
-    <button type="button" class="btn btn-primary">默认按钮</button>
-    <button type="button" class="btn btn-primary btn-sm">小号按钮</button>
+    <h2>面包屑导航</h2>
+    <p>.breadcrumb 和 .breadcrumb-item 类用于设置面包屑导航：</p>                  
+    <ul class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#">Photos</a></li>
+      <li class="breadcrumb-item"><a href="#">Summer 2017</a></li>
+      <li class="breadcrumb-item"><a href="#">Italy</a></li>
+      <li class="breadcrumb-item active">Rome</li>
+    </ul>
   </div>
+  
 </body>
 </html>
