--- a/Bootstrap4/列表组/水平列表组.html
+++ b/Bootstrap4/列表组/水平列表组.html
@@ -11,10 +11,14 @@
 </head>
 <body>
   <div class="container">
-    <h2>不同大小的按钮</h2>
-    <button type="button" class="btn btn-primary btn-lg">大号按钮</button>
-    <button type="button" class="btn btn-primary">默认按钮</button>
-    <button type="button" class="btn btn-primary btn-sm">小号按钮</button>
+    <h2>水平列表组</h2>
+    <p>可以将 .list-group-horizontal 类添加到 .list-group 类后面来创建水平列表组：</p>
+    <ul class="list-group list-group-horizontal">
+      <li class="list-group-item">First item</li>
+      <li class="list-group-item">Second item</li>
+      <li class="list-group-item">Third item</li>
+      <li class="list-group-item">Fourth item</li>
+    </ul>
   </div>
 </body>
 </html>
