--- a/Bootstrap4/列表组/禁用的列表项.html
+++ b/Bootstrap4/列表组/禁用的列表项.html
@@ -11,10 +11,12 @@
 </head>
 <body>
   <div class="container">
-    <h2>不同大小的按钮</h2>
-    <button type="button" class="btn btn-primary btn-lg">大号按钮</button>
-    <button type="button" class="btn btn-primary">默认按钮</button>
-    <button type="button" class="btn btn-primary btn-sm">小号按钮</button>
-  </div>
+    <h2>禁用的列表项</h2>
+    <ul class="list-group">
+      <li class="list-group-item disabled">Disabled item</li>
+      <li class="list-group-item">Second item</li>
+      <li class="list-group-item">Third item</li>
+    </ul>
+  </div>  
 </body>
 </html>
