--- a/Bootstrap4/列表组/移除列表边框.html
+++ b/Bootstrap4/列表组/移除列表边框.html
@@ -11,10 +11,16 @@
 </head>
 <body>
   <div class="container">
-    <h2>不同大小的按钮</h2>
-    <button type="button" class="btn btn-primary btn-lg">大号按钮</button>
-    <button type="button" class="btn btn-primary">默认按钮</button>
-    <button type="button" class="btn btn-primary btn-sm">小号按钮</button>
+    <h2>移除列表边框</h2>
+    <p>使用 .list-group-flush 类来删除列表的边框和圆角：</p>
+  </div>
+  <div class="container">
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">First item</li>
+      <li class="list-group-item">Second item</li>
+      <li class="list-group-item">Third item</li>
+      <li class="list-group-item">Fourth item</li>
+    </ul>
   </div>
 </body>
 </html>
