--- a/Bootstrap4/列表组/链接列表项.html
+++ b/Bootstrap4/列表组/链接列表项.html
@@ -11,10 +11,11 @@
 </head>
 <body>
   <div class="container">
-    <h2>不同大小的按钮</h2>
-    <button type="button" class="btn btn-primary btn-lg">大号按钮</button>
-    <button type="button" class="btn btn-primary">默认按钮</button>
-    <button type="button" class="btn btn-primary btn-sm">小号按钮</button>
-  </div>
+    <h2>链接列表项</h2>
+    <div class="list-group">
+      <a href="#" class="list-group-item list-group-item-action">First item</a>
+      <a href="#" class="list-group-item list-group-item-action">Second item</a>
+      <a href="#" class="list-group-item list-group-item-action">Third item</a>
+    </div>  
 </body>
 </html>
