--- a/Bootstrap4/卡片/头部和底部.html
+++ b/Bootstrap4/卡片/头部和底部.html
@@ -11,10 +11,12 @@
 </head>
 <body>
   <div class="container">
-    <h2>不同大小的按钮</h2>
-    <button type="button" class="btn btn-primary btn-lg">大号按钮</button>
-    <button type="button" class="btn btn-primary">默认按钮</button>
-    <button type="button" class="btn btn-primary btn-sm">小号按钮</button>
+    <h2>卡片头部和底部</h2>
+    <div class="card">
+      <div class="card-header">头部</div>
+      <div class="card-body">内容</div> 
+      <div class="card-footer">底部</div>
+    </div>
   </div>
 </body>
 </html>
