--- a/Bootstrap4/卡片/简单的卡片.html
+++ b/Bootstrap4/卡片/简单的卡片.html
@@ -11,10 +11,11 @@
 </head>
 <body>
   <div class="container">
-    <h2>不同大小的按钮</h2>
-    <button type="button" class="btn btn-primary btn-lg">大号按钮</button>
-    <button type="button" class="btn btn-primary">默认按钮</button>
-    <button type="button" class="btn btn-primary btn-sm">小号按钮</button>
+    <h2>简单的卡片</h2>
+    <div class="card">
+      <div class="card-body">简单的卡片</div>
+    </div>
   </div>
+  
 </body>
 </html>
