--- a/Bootstrap4/分页/不可点击的分页链接.html
+++ b/Bootstrap4/分页/不可点击的分页链接.html
@@ -11,10 +11,16 @@
 </head>
 <body>
   <div class="container">
-    <h2>不同大小的按钮</h2>
-    <button type="button" class="btn btn-primary btn-lg">大号按钮</button>
-    <button type="button" class="btn btn-primary">默认按钮</button>
-    <button type="button" class="btn btn-primary btn-sm">小号按钮</button>
+    <h2>不可点击的分页链接</h2>
+    <p>.disabled 类可以设置分页链接不可点击:</p>                  
+    <ul class="pagination">
+      <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item"><a class="page-link" href="#">Next</a></li>
+    </ul>
   </div>
+  
 </body>
 </html>
